[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tomato.png" type="Texture" id=1]
[ext_resource path="res://scripts/fruit.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 68.3992

[node name="tomato" type="RigidBody2D"]
collision_layer = 2
collision_mask = 0
gravity_scale = 8.0
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="half_left" type="RigidBody2D" parent="."]
mode = 1
gravity_scale = 15.0

[node name="sprite" type="Sprite" parent="half_left"]
position = Vector2( -35, 0 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 200, 400 )

[node name="half_right" type="RigidBody2D" parent="."]
mode = 1
gravity_scale = 15.0

[node name="sprite" type="Sprite" parent="half_right"]
position = Vector2( 35, 0 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 200, 0, 200, 400 )

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
